# openaivec

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml  lint.yml  publish-whl.yml  python-asset.yml  python-mkdocs.yml  python-package.yml  python-publish.yml  python-test.yml  python-update.yml
docs/: aio.embeddings.md  api.md  index.md  robots.txt
docs/api/: task.md
docs/examples/: aio.ipynb  customer_analysis.ipynb  generate_faq.ipynb  pandas.ipynb  prompt.ipynb  spark.ipynb  survey_transformation.ipynb
example/: generate_faq.ipynb  pandas.ipynb  prompt.ipynb  spark.ipynb
examples/: prompt.ipynb  spark.ipynb
openaivec/: __init__.py  embedding.py  log.py  pandas_ext.py  prompt.py  serialize.py  spark.py  test_embedding.py  test_prompt.py  test_serialize.py  test_spark.py  test_util.py  test_vectorize.py  udf.py  util.py  vectorize.py
openaivec/beta/: batch.py  prompt.py  schema.py  test_prompt.py
src/openaivec/: __init__.py  embedding.py  embeddings.py  pandas_ext.py  prompt.py  responses.py  serialize.py  spark.py  util.py  vectorize.py
src/openaivec/aio/: __init__.py  embeddings.py  pandas_ext.py  responses.py  spark.py  (+1 more)
tests/: test_entra_auth.py  test_pandas_ext.py  test_prompt.py  test_responses.py  test_serialize.py  test_spark.py  test_task.py  test_util.py  test_vectorize.py
tests/aio/: test_embeddings.py  test_pandas.py  test_pandas_ext.py  test_responses.py  test_spark.py  test_util.py
tests/beta/: test_embeddings.py  test_responses.py
(+19 files in other folders)
