[tool.poetry]
name = "openaivec"
version = "0.1.7"
description = ""
authors = ["Hiroki Mizukami <hmizukami@microsoft.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "openaivec", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pyspark = "^3.5.1"
openai = "^1.57.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
